--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite": "^5.4.6"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "izitoast": "^1.4.0",
     "simplelightbox": "^2.14.3",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
